--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <div class="header">
                 <div class="nav">
                     <div class="hambcont">
-                        <img class="invert hamb" src="hamburger.svg">
+                        <img class="invert hamb" src="images/hamburger.svg">
 
                         <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path
