--- a/index.html
+++ b/index.html
@@ -1,187 +1,81 @@
-<!DOCTYPE html>
-<html lang="en">
+let currentsong=new Audio();
+let songul
+async function getsongs() {
+    let a = await fetch("http://127.0.0.1:3000/songs/")
+    let response = await a.text();
+    let div = document.createElement("div")
+    div.innerHTML = response;
+    let as = div.getElementsByTagName("a")
+    let songs = []
+    for (let index = 0; index < as.length; index++) {
+        const element = as[index];
+        if (element.href.endsWith(".mp3")) {
+            songs.push(element.href.split("/songs/")[1])
+        }
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Spotify web application</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/utility.css">
-</head>
+    }
+    return songs
+}
+const playmusic=(track)=>{
+   currentsong.src="/songs/" +track
+   currentsong.play()
+    play.src="images/pause.svg"
+    document.querySelector(".songinfo").innerHTML=track;
+    document.querySelector(".duration").innerHTML="00:00/00.00";
 
-<body>
-    <div class="container flex bg-black">
-        <div class="left border">
-            <div class="home bg-grey m1 rounded paddy font">
-                <div class="logo invert"><img src="logo.svg">
-                <img class="close" src="close.svg"></div>
-                <ul>
-                    <li> <img class="invert" src="home.svg" alt="home">Home</li>
-                    <li> <img class="invert" src="search.svg" alt="home">Search</li>
-                </ul>
-            </div>
-            <div class="library bg-grey m1 rounded paddy">
-                <div class="heading flex align-items">
-                    <img width=25px class="invert" src="library.svg">
-                    <p> Your Library</p>
-                </div>
-                <div class="songplaylist">
-                    <ul>
+}
+async function main() {
+    let songs = await getsongs()
+    console.log(songs)
+    songul = document.querySelector(".songplaylist").getElementsByTagName("ul")[0]
+    for (const song of songs) {
 
-                    </ul>
-                </div>
-                <div class="footer">
-                    <div><a href="https://www.spotify.com/in-en/legal/"><span>Legal</span></a></div>
-                    <div><a href="https://www.spotify.com/in-en/safetyandprivacy/"><span>Safety</span></a></div>
-                    <div><a href="https://www.spotify.com/in-en/legal/privacy-policy/"><span>PrivacyPolicy</span></a>
-                    </div>
-                    <div><a href="https://www.spotify.com/in-en/legal/cookies-policy/"><span>Cookies</span></a></div>
-                    <div><a href="https://www.spotify.com/in-en/accessibility/"><span>Accessibility</span></a></div>
-                    <div><a draggable="false"
-                            href="https://www.spotify.com/legal/cookies-policy/"><span>Cookies</span></a></div>
-                </div>
-            </div>
-        </div>
-        <div class="right border bg-grey m2 rounded ">
-            <div class="header">
-                <div class="nav">
-                    <div class="hambcont">
-                        <img class="invert hamb" src="images/hamburger.svg">
+        songul.innerHTML = songul.innerHTML + `
+                        <li>
+                            <img class="invert"src="images/music.svg">
+                            <div class="one">
+                                <p>${song.replaceAll("%20", " ")}</p>
+                                <p>artist name</p>
+                            </div>
+                            <div class="playnow">
+                            <span> play now</span>
+                            <img class="invert" src="images/play.svg">
+                            </div>
+                        </li>`;
+    }
+    Array.from(document.querySelector(".songplaylist").getElementsByTagName("li")).forEach(e => {
+        e.addEventListener("click",element=>{
+            console.log(e.querySelector(".one").firstElementChild.innerHTML);
+            playmusic(e.querySelector(".one").firstElementChild.innerHTML.trim());
+        })
+        
+    })
+    play.addEventListener("click",()=>{
+        if(currentsong.paused){
+             currentsong.play()
+             play.src="images/pause.svg"
+        }
+        else{
+            currentsong.pause()
+            play.src="images/play.svg"
+        }
+        play.addEventListener.style.position="fixed";
+    })
+    document.querySelector(".hamb").addEventListener("click",()=>{
+        document.querySelector(".left").style.left="0";
+    })
+    document.querySelector(".close").addEventListener("click",()=>{
+        document.querySelector(".left").style.left="-110%";
+    })
+    previous.addEventListener("click",()=>{
+        console.log(songul)
+        let song1=document.getElementsByTagName("li")
+        console.log(song1)
+    })
+    next.addEventListener("click",()=>{
+        console.log(currentsong)
+        console.log(songs)
 
-                        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path
-                                d="M15 6L9.70711 11.2929C9.37377 11.6262 9.20711 11.7929 9.20711 12C9.20711 12.2071 9.37377 12.3738 9.70711 12.7071L15 18"
-                                stroke="#ffffff" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
-                        </svg>
-                        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path
-                                d="M9 18L14.2929 12.7071C14.6262 12.3738 14.7929 12.2071 14.7929 12C14.7929 11.7929 14.6262 11.6262 14.2929 11.2929L9 6"
-                                stroke="#ffffff" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
-                        </svg>
-                    </div>
-                </div>
-                <div class="buttons">
-                    <button class="btn-1">sign up</button>
-                    <button class="btn-2">Log in </button>
-                </div>
-            </div>
-            <div class="spotify">
-                <h3>Spotify playlists</h3>
-                <div class="cardcontainer">
-                    <div class="card">
-                        <img src="https://i.scdn.co/image/ab67616d00001e026404721c1943d5069f0805f3">
-                        <h2>Aashiqui 2</h2>
-                        <p>
-                            <a href="/artist/09UmIX92EUH9hAK4bxvHx6">Mithoon,</a>
-                            <a href="/artist/09UmIX92EUH9hAK4bxvHx6">Ankith tiwari,</a>
-                            <a href="/artist/09UmIX92EUH9hAK4bxvHx6">Jeet Ganguuli</a>
-                        </p>
-                    </div>
-                    <div class="card">
-                        <img src="https://i.scdn.co/image/ab67616d00001e02707ea5b8023ac77d31756ed4">
-                        <h2>Yeh Jawaani</h2>
-                        <p>
-                            <a href="/artist/09UmIX92EUH9hAK4bxvHx6">Mithoon,</a>
-                            <a href="/artist/09UmIX92EUH9hAK4bxvHx6">Ankith tiwari,</a>
-                            <a href="/artist/09UmIX92EUH9hAK4bxvHx6">Jeet Ganguuli</a>
-                        </p>
-                    </div>
-                    <div class="card">
-                        <img src="https://i.scdn.co/image/ab67706f00000002e73a174755efa17723bd1419">
-                        <h2>Hot Songs</h2>
-                        <p>
-                            <a href="/artist/09UmIX92EUH9hAK4bxvHx6">Mithoon,</a>
-                            <a href="/artist/09UmIX92EUH9hAK4bxvHx6">Ankith tiwari,</a>
-                            <a href="/artist/09UmIX92EUH9hAK4bxvHx6">Jeet Ganguuli</a>
-                        </p>
-                    </div>
-                    <div class="card">
-                        <img src="https://i.scdn.co/image/ab67706f0000000283694cf8ca8a9432d07b99ba">
-                        <h2>Trending New</h2>
-                        <p>
-                            <a href="/artist/09UmIX92EUH9hAK4bxvHx6">Mithoon,</a>
-                            <a href="/artist/09UmIX92EUH9hAK4bxvHx6">Ankith tiwari,</a>
-                            <a href="/artist/09UmIX92EUH9hAK4bxvHx6">Jeet Ganguuli</a>
-                        </p>
-                    </div>
-                    <div class="card">
-                        <img src="	https://i.scdn.co/image/ab67706f00000002788ca485041ed216b7fc4d6b">
-                        <h2>Latest Romanace </h2>
-                        <p>
-                            <a href="/artist/09UmIX92EUH9hAK4bxvHx6">Mithoon,</a>
-                            <a href="/artist/09UmIX92EUH9hAK4bxvHx6">Ankith tiwari,</a>
-                            <a href="/artist/09UmIX92EUH9hAK4bxvHx6">Jeet Ganguuli</a>
-                        </p>
-                    </div>
-                    <div class="card">
-                        <img src="https://i.scdn.co/image/ab67706f0000000244b0932b623b17698d02ba35">
-                        <h2>Game Changer</h2>
-                        <p>
-                            <a href="/artist/09UmIX92EUH9hAK4bxvHx6">Mithoon,</a>
-                            <a href="/artist/09UmIX92EUH9hAK4bxvHx6">Ankith tiwari,</a>
-                            <a href="/artist/09UmIX92EUH9hAK4bxvHx6">Jeet Ganguuli</a>
-                        </p>
-                    </div>
-                    <div class="card">
-                        <img src="https://i.scdn.co/image/ab67706f00000002f184963c2a8c10398889ab37">
-                        <h2>DJ Tillu</h2>
-                        <p>
-                            <a href="/artist/09UmIX92EUH9hAK4bxvHx6">Mithoon,</a>
-                            <a href="/artist/09UmIX92EUH9hAK4bxvHx6">Ankith tiwari,</a>
-                            <a href="/artist/09UmIX92EUH9hAK4bxvHx6">Jeet Ganguuli</a>
-                        </p>
-                    </div>
-                    <div class="card">
-                        <img src="https://i.scdn.co/image/ab67706f0000000277ede2a3bba3060652445007">
-                        <h2>Arjun reddy</h2>
-                        <p>
-                            <a href="/artist/09UmIX92EUH9hAK4bxvHx6">Mithoon,</a>
-                            <a href="/artist/09UmIX92EUH9hAK4bxvHx6">Ankith tiwari,</a>
-                            <a href="/artist/09UmIX92EUH9hAK4bxvHx6">Jeet Ganguuli</a>
-                        </p>
-                    </div>
-                    <div class="card">
-                        <img src="https://i.scdn.co/image/ab67616d00001e026404721c1943d5069f0805f3">
-                        <h2>Aashiqui 2</h2>
-                        <p>
-                            <a href="/artist/09UmIX92EUH9hAK4bxvHx6">Mithoon,</a>
-                            <a href="/artist/09UmIX92EUH9hAK4bxvHx6">Ankith tiwari,</a>
-                            <a href="/artist/09UmIX92EUH9hAK4bxvHx6">Jeet Ganguuli</a>
-                        </p>
-                    </div>
-                    <div class="card">
-                        <img src="https://i.scdn.co/image/ab67616d00001e026404721c1943d5069f0805f3">
-                        <h2>Aashiqui 2</h2>
-                        <p>
-                            <a href="/artist/09UmIX92EUH9hAK4bxvHx6">Mithoon,</a>
-                            <a href="/artist/09UmIX92EUH9hAK4bxvHx6">Ankith tiwari,</a>
-                            <a href="/artist/09UmIX92EUH9hAK4bxvHx6">Jeet Ganguuli</a>
-                        </p>
-                    </div>
-                </div>
-
-            </div>
-            <div class="playbar">
-
-                <div class="raj">
-                    <div class="songinfo"></div>
-                    <div class="songs">
-                        <img id="previous" src="images/previous.svg">
-                        <img id="play" src="play.svg" alt="">
-                        <img id="next" src="images/next.svg">
-                    </div>
-                    <div class="duration"></div>
-                </div>
-                <div class="seekbar">
-                    <div class="circle"></div>
-                </div>
-
-            </div>
-
-        </div>
-
-    </div>
-    <script src="script.js"></script>
-</body>
-
-</html>
+    })
+}
+main()
